force-app/main/default/objects/Match_Goal__c/Match_Goal__c.object-meta.xml
<CustomObject>
    <label>Match Goal</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Goal #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>