force-app/main/default/objects/Match_Goal__c/fields/Assist__c.field-meta.xml
<CustomField>
    <fullName>Assist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assist</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Match Goals (Assist)</relationshipLabel>
    <relationshipName>Match_Goals1</relationshipName>
    <type>Lookup</type>
</CustomField>