force-app/main/default/objects/Match_Goal__c/fields/Goal_Type__c.field-meta.xml
<CustomField>
    <fullName>Goal_Type__c</fullName>
    <label>Goal Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal Goal</fullName>
                <default>true</default>
                <label>Normal Goal</label>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
            <value>
                <fullName>Free Kick</fullName>
            </value>
            <value>
                <fullName>Own Goal</fullName>
            </value>
            <value>
                <fullName>Corner Kick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>