force-app/main/default/objects/Match_Goal__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <label>Match</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Match Goals</relationshipLabel>
    <relationshipName>Match_Goals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>