force-app/main/default/objects/Match_Goal__c/fields/Minute__c.field-meta.xml
<CustomField>
    <fullName>Minute__c</fullName>
    <label>Minute</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>