force-app/main/default/objects/Match_Goal__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Match Goals</relationshipLabel>
    <relationshipName>Match_Goals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>