force-app/main/default/objects/Match_Goal__c/fields/Scoring_Team__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Team__c</fullName>
    <label>Scoring Team</label>
    <length>24</length>
    <type>Text</type>
</CustomField>