force-app/main/default/objects/Match_Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Match__c</columns>
    <columns>Player__c</columns>
    <columns>Goal_Type__c</columns>
    <columns>Minute__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>